# PainelCOA_Solinftec_Flet

./: .gitignore  pyproject.toml
src/: functions.py  graphs.py  main.py  queries.py
src/cncts/: apis.py  auth_firebase.py  crud_sql.py  getenv.py
src/design/: create_elements.py  edit_elements.py
